# anvil-benchmarks

./: .env  .env.example  .gitignore  BENCHMARKS.md  Cargo.toml  README.md  anvil_sys_shutdown_benchmarks.json  anvil_sys_shutdown_benchmarks.md  build.rs  nohup.out  output.json
benches/: anvil-benchmarks.rs  anvil_block_mine_benchmarks.rs  anvil_sys_shutdown_benchmarks.rs  anvil_sys_shutdown_benchmarks.rs~  utils.rs
src/: .lib.rs.icloud  main.rs
src/bindings/: convex.rs  mod.rs
