[package]
name = "anvil-benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
eyre = {version = "0.6.5"}
ethers = {version = "2.0.7", features = ["ipc"]}


[dependencies]
anvil = {git = "https://github.com/SorellaLabs/fastfoundry.git"}
ethers = {version = "2.0.7", features = ["ipc"]}
serde = {version = "1.0.163"}
tokio = {version = "1.28.2", features = ["full"]}
ndarray = "0.15"
ndarray-stats = "0.5.1"
num-traits = "0.2.15"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio","html_reports"] }



[[bench]]
name = "anvil_sys_shutdown_benchmarks"
harness = false

#[[bench]]
#name = "anvil_block_mine_benchmarks"
#harness = false




[patch.crates-io]
# patched for quantity U256 responses <https://github.com/recmo/uint/issues/224>
ruint = { git = "https://github.com/paradigmxyz/uint" }
revm-primitives = { git = "https://github.com/bluealloy/revm/", branch = "release/v25" }
revm = { git = "https://github.com/bluealloy/revm/", branch = "release/v25" }

